# sigilant-sweep

./: .gitignore  COMMANDS.md  COMMANDS_LLAMA_CPP.md  LICENSE  LLAMACPP_INTERNAL_FLOW.md  README.md  pyproject.toml
.github/workflows/: ci.yml  local-backend-smoke.yml  publish.yml
docs/: OSS_STATUS_20260504.md  architecture.md  commands.md  limitations.md  reproducibility.md  running-on-modal.md  vllm_repos.md
prompts/: default_eval_prompt.txt  hard_quality_14k_prompt.txt  hard_quality_28k_prompt.txt  hard_quality_8k_prompt.txt  ppl_corpus_250.txt
readme/: PYPI_NAMING_PLAN.md  README_INTEL_MAC2017_LLAMA_CPP.md  README_INTEL_MAC2017_VLLM.md  README_OSS_LLAMA_CPP.md  README_OSS_VLLM.md
scripts/: release_preflight.sh  release_verify.sh
sigilant_runner/: __init__.py  cli.py  models.py  setup_wizard.py
sigilant_runner/backends/: local.py  modal_backend.py  runpod_backend.py
sigilant_runner/core/: agent_smoke.py  depth_prompts.py  diagnostics.py  eval_prompt.py  grid.py  hardware.py  metrics.py  ppl_corpus.py  ranking.py  scoring.py
sigilant_runner/data/depth_prompts/: hard_quality_8k_prompt.txt
sigilant_runner/engines/: llama_cli_engine.py  llama_engine.py  vllm_engine.py
sigilant_runner/output/: export.py  table.py
