[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigilant-runner"
version = "0.1.0"
description = "Open-source LLM inference sweep — TPS, TTFT, ITL, PPL across 16 configs on your hardware."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
llama  = ["llama-cpp-python>=0.2.90", "huggingface-hub>=0.23.0"]
modal  = ["modal>=0.64.0",            "huggingface-hub>=0.23.0"]
all = [
    "llama-cpp-python>=0.2.90",
    "modal>=0.64.0",
    "huggingface-hub>=0.23.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
sigilant-runner = "sigilant_runner.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sigilant_runner"]

[tool.ruff.lint]
select = ["E", "F", "I"]
